# vcr-bench

./: .gitattributes  .gitignore  README.md  __init__.py  batch_attack.sh  batch_prepare.sh  diag_tsm.py  diag_tsm.sh  models_kinetics400-test.sh  models_kinetics400.sh  models_ssv2.sh  pyproject.toml  test_models.sh  types.py
.claude/: settings.local.json
attacks/: __init__.py  base.py  query_base.py  registry.py  utils.py  zhang_common.py
attacks/amifgsm/: attack.py
attacks/bmtc/: __init__.py  attack.py
attacks/flickering/: attack.py
attacks/gradest/: attack.py
attacks/gradestv2/: attack.py
attacks/ifgsm/: __init__.py  attack.py
attacks/korhonen_et_al/: attack.py
attacks/mifgsm/: __init__.py  attack.py
attacks/parsimonious/: __init__.py  attack.py
attacks/square/: attack.py
attacks/ssah/: __init__.py  (+1 more)
cli/: attack.py  common.py  prepare.py  test.py
configs/: benchmarks.toml  checkpoints.toml  datasets.toml  defaults.toml  local.toml.example
datasets/: base.py  factory.py  loaded.py
defences/: base.py  registry.py
docs/: REMOTE_DEBUGGING.md  adding_attacks.md  adding_datasets.md  adding_defences.md  adding_models.md  formats.md
models/: __init__.py  base.py  pipeline_tools.py  registry.py
scripts/: batch_attack.sh  batch_prepare.sh  diag_tsm.py  diag_tsm.sh  models_kinetics400-test.sh  models_kinetics400.sh  models_ssv2.sh  test_models.sh
tests/: test_artifacts_cli.py  test_config_and_suites.py  test_presets.py
vcr_bench/: __init__.py  artifacts.py  benchmarks.py  config.py  presets.py  types.py
vg_videobench/: __init__.py
(+295 files in other folders)
